--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "kue": "^0.11.5",
     "mongoose": "^4.8.5",
     "node-uuid": "^1.4.7",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1"
   }
 }
