--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Job queue project. Code Challenge project",
   "main": "server.js",
   "scripts": {
+    "debug": "node --inspect --debug-brk index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,6 @@
     "express": "^4.15.0",
     "kue": "^0.11.5",
     "mongoose": "^4.8.5",
-    "node-uuid": "^1.4.7",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   }
